--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.11.15",
     "multer": "^1.4.2"
   }
 }
